--- a/index.html
+++ b/index.html
@@ -71,73 +71,79 @@
                 </div>
                 <div class="backdrop is-hidden" data-modal>
                     <div class="modal">
-                        <button class="modal__btn" data-modal-close>
-                            <svg class="modal__icon" width="11" height="11">
+                        <button class="modal-btn" data-modal-close>
+                            <svg class="modal-btn__icon" width="11" height="11">
                                 <use href="./images/symbol-defs.svg#icon-close-cross"></use>
                             </svg>
                         </button>
                         <b class="modal__text">Оставьте свои данные, мы вам перезвоним</b>
-                        <form class="modal__form">
-                            <label class="form-field">
-                                <span class="form-label">Имя</span>
+                        <form class="form">
+                            <label class="form__field">
+                                <span class="form__label">Имя</span>
                                 <input
                                     type="text"
                                     name="name"
-                                    class="form-input"
+                                    class="form__input"
                                     autocomplete="off"
                                 />
-                                <svg class="form-icon" width="18" height="18">
+                                <svg class="form__icon" width="18" height="18">
                                     <use href="./images/icons.svg#icon-person"></use>
                                 </svg>
                             </label>
 
-                            <label class="form-field">
-                                <span class="form-label">Телефон</span>
+                            <label class="form__field">
+                                <span class="form__label">Телефон</span>
                                 <input
                                     type="tel"
                                     name="phone"
-                                    class="form-input"
+                                    class="form__input"
                                     autocomplete="off"
                                 />
-                                <svg class="form-icon" width="18" height="18">
+                                <svg class="form__icon" width="18" height="18">
                                     <use href="./images/icons.svg#icon-phone"></use>
                                 </svg>
                             </label>
 
-                            <label class="form-field">
-                                <span class="form-label">Почта</span>
+                            <label class="form__field">
+                                <span class="form__label">Почта</span>
                                 <input
                                     type="email"
                                     name="mail"
-                                    class="form-input"
+                                    class="form__input"
                                     autocomplete="off"
                                 />
-                                <svg class="form-icon" width="18" height="18">
+                                <svg class="form__icon" width="18" height="18">
                                     <use href="./images/icons.svg#icon-email"></use>
                                 </svg>
                             </label>
 
-                            <label class="form-field">
-                                <span class="form-label">Комментарий</span>
+                            <label class="form__field">
+                                <span class="form__label">Комментарий</span>
                                 <textarea
-                                    class="form-textarea"
+                                    class="form__input textarea"
                                     name="comment"
                                     placeholder="Введите текст"
                                 ></textarea>
                             </label>
 
-                            <label class="form-checkbox">
-                                <input type="checkbox" name="accept" class="checkbox-input" />
-                                <svg class="checkbox-field" width="16" height="15">
+                            <label class="checkbox">
+                                <input
+                                    type="checkbox"
+                                    name="accept"
+                                    class="checkbox__input visually-hidden"
+                                />
+                                <svg class="checkbox__icon" width="16" height="15">
                                     <use href="./images/icons.svg#icon-check-input"></use>
                                 </svg>
-                                <span class="checkbox-lable"
+                                <span class="checkbox__lable"
                                     >Соглашаюсь с рассылкой и принимаю
-                                    <a href="" class="checkbox-lable-link">Условия договора</a>
+                                    <a href="" class="checkbox__link">Условия договора</a>
                                 </span>
                             </label>
 
-                            <button type="submit" class="button form-btn">Отправить</button>
+                            <button type="submit" class="button button--submit-form">
+                                Отправить
+                            </button>
                         </form>
                     </div>
                 </div>
