--- a/portfolio.html
+++ b/portfolio.html
@@ -11,47 +11,45 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        />
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/main.min.css" />
     </head>
     <body>
         <header class="header">
             <div class="container header-content">
                 <nav class="navigation">
                     <a class="logo" href="./index.html">
-                        <span class="blue-logo">Web</span>Studio
+                        <span class="logo__part">Web</span>Studio
                     </a>
 
-                    <ul class="site-nav list">
-                        <li class="item">
-                            <a class="site-nav-link" href="./index.html">Студия</a>
+                    <ul class="site-nav">
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="./index.html">Студия</a>
                         </li>
 
-                        <li class="item">
-                            <a class="site-nav-link activ" href="./portfolio.html">Портфолио</a>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link site-nav__link--activ" href="./portfolio.html"
+                                >Портфолио</a
+                            >
                         </li>
 
-                        <li class="item">
-                            <a class="site-nav-link" href="">Контакты</a>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="">Контакты</a>
                         </li>
                     </ul>
                 </nav>
-                <ul class="contacts list">
-                    <li class="item">
-                        <a class="contacts-link" href="mailto:info@devstudio.com">
-                            <svg class="link-icon" width="16" height="12">
+                <ul class="contacts">
+                    <li class="contacts__item">
+                        <a class="contacts__link" href="mailto:info@devstudio.com">
+                            <svg class="contacts__icon" width="16" height="12">
                                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
                             </svg>
                             info@devstudio.com
                         </a>
                     </li>
 
-                    <li class="item">
-                        <a class="contacts-link" href="tel:+380961111111">
-                            <svg class="link-icon phone" width="10" height="16">
+                    <li class="contacts__item">
+                        <a class="contacts__link" href="tel:+380961111111">
+                            <svg class="contacts__icon phone" width="10" height="16">
                                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                             </svg>
                             +38 096 111 11 11
@@ -63,24 +61,24 @@
         <main>
             <section class="section">
                 <div class="container">
-                    <ul class="filters list">
-                        <li class="item">
-                            <button class="filter-button" type="button">Все</button>
+                    <ul class="filters">
+                        <li class="filters__item">
+                            <button class="filters__button" type="button">Все</button>
                         </li>
-                        <li class="item">
-                            <button class="filter-button" type="button">Веб-сайты</button>
+                        <li class="filters__item">
+                            <button class="filters__button" type="button">Веб-сайты</button>
                         </li>
-                        <li class="item">
-                            <button class="filter-button" type="button">Приложения</button>
+                        <li class="filters__item">
+                            <button class="filters__button" type="button">Приложения</button>
                         </li>
-                        <li class="item">
-                            <button class="filter-button" type="button">Дизайн</button>
+                        <li class="filters__item">
+                            <button class="filters__button" type="button">Дизайн</button>
                         </li>
-                        <li class="item">
-                            <button class="filter-button" type="button">Маркетинг</button>
+                        <li class="filters__item">
+                            <button class="filters__button" type="button">Маркетинг</button>
                         </li>
                     </ul>
-                    <ul class="card-set list">
+                    <ul class="card-set">
                         <li class="item">
                             <div class="card-thumb">
                                 <img src="./images/technocrack.jpg" alt="веб-сайт Технокряк " />
@@ -240,63 +238,67 @@
         </main>
         <!-- footer -->
         <footer class="footer">
-            <div class="container main-footer">
+            <div class="container container--flexed">
                 <div class="address-block">
-                    <a class="logo-footer" href="./index.html">
-                        <span class="blue-logo">Web</span>Studio
+                    <a class="logo logo--inverted" href="./index.html">
+                        <span class="logo__part">Web</span>Studio
                     </a>
                     <address class="address">
-                        <ul class="address-list list">
-                            <li class="item">
+                        <ul class="address__list">
+                            <li class="address__item">
                                 <a
-                                    class="link white"
+                                    class="address__link address__link--general"
                                     href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                                 >
                                     г. Киев, пр-т Леси Украинки, 26
                                 </a>
                             </li>
 
-                            <li class="item">
-                                <a class="link" href="mailto:info@example.com">info@example.com</a>
+                            <li class="address__item">
+                                <a class="address__link" href="mailto:info@example.com"
+                                    >info@example.com</a
+                                >
                             </li>
 
-                            <li class="item">
-                                <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+                            <li class="address__item">
+                                <a class="address__link" href="tel:+380991111111"
+                                    >+38 099 111 11 11</a
+                                >
                             </li>
                         </ul>
                     </address>
                 </div>
 
                 <div class="join-block">
-                    <p class="join-title">присоединяйтесь</p>
-                    <ul class="socials list">
-                        <li class="item">
-                            <a class="link" href="">
-                                <svg class="icon" width="20" height="20">
+                    <p class="reuse__title reuse__title--modified">присоединяйтесь</p>
+                    <ul class="social-media">
+                        <li class="social-media__item">
+                            <a class="social-media__link social-media__link--modified" href="">
+                                <svg class="social-media__icon" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
 
-                        <li class="item">
-                            <a class="link" href="">
-                                <svg class="icon" width="20" height="20">
+                        <li class="social-media__item">
+                            <a class="social-media__link social-media__link--modified" href="">
+                                <svg class="social-media__icon" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
 
-                        <li class="item">
-                            <a class="link" href="">
-                                <svg class="icon" width="20" height="20">
+                        <li class="social-media__item">
+                            <a class="social-media__link social-media__link--modified" href="">
+                                <svg class="social-media__icon" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
 
-                        <li class="item">
-                            <a class="link" href="">
-                                <svg class="icon" width="20" height="20">
+                        <li class="social-media__item">
+                            <a class="social-media__link social-media__link--modified" href="">
+                                <svg class="social-media__icon" width="20" height="20">
                                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -305,18 +307,18 @@
                 </div>
 
                 <div class="form-block">
-                    <p class="form-title">Подпишитесь на рассылку</p>
-                    <div class="form-thumb">
+                    <p class="reuse__title reuse__title--modified">Подпишитесь на рассылку</p>
+                    <div class="form-wrapper">
                         <form class="join-form">
                             <input
                                 type="email"
                                 name="mail"
                                 placeholder="E-mail"
-                                class="join-form-input"
+                                class="join-form__input"
                             />
                         </form>
 
-                        <button type="submit" class="button footer-btn">
+                        <button type="submit" class="button button--centered">
                             Подписаться<svg class="form-btn-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-telegram"></use>
                             </svg>
