--- a/portfolio.html
+++ b/portfolio.html
@@ -79,11 +79,15 @@
                         </li>
                     </ul>
                     <ul class="card-set">
-                        <li class="item">
-                            <div class="card-thumb">
-                                <img src="./images/technocrack.jpg" alt="веб-сайт Технокряк " />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                        <li class="card">
+                            <div class="card__wrap">
+                                <img
+                                    class="card__image"
+                                    src="./images/technocrack.jpg"
+                                    alt="веб-сайт Технокряк "
+                                />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
@@ -91,13 +95,13 @@
                                 </div>
                             </div>
 
-                            <div class="project-card">
-                                <h2 class="project-title">Технокряк</h2>
-                                <p class="project-text">Веб-сайт</p>
+                            <div class="card__content">
+                                <h2 class="card__title">Технокряк</h2>
+                                <p class="card__text">Веб-сайт</p>
                             </div>
                         </li>
 
-                        <li class="item">
+                        <li class="card">
                             <div class="card-thumb">
                                 <img src="./images/poster.jpg" alt="два баскетболиста" />
                                 <div class="card-overlay">
@@ -114,7 +118,7 @@
                             </div>
                         </li>
 
-                        <li class="item">
+                        <li class="card">
                             <div class="card-thumb">
                                 <img src="./images/seafood.jpg" alt="" />
                                 <div class="card-overlay">
@@ -131,7 +135,7 @@
                             </div>
                         </li>
 
-                        <li class="item">
+                        <li class="card">
                             <div class="card-thumb">
                                 <img src="./images/prime.jpg" alt="" />
                                 <div class="card-overlay">
@@ -148,7 +152,7 @@
                             </div>
                         </li>
 
-                        <li class="item">
+                        <li class="card">
                             <div class="card-thumb">
                                 <img src="./images/boxes.jpg" alt="" />
                                 <div class="card-overlay">
@@ -165,7 +169,7 @@
                             </div>
                         </li>
 
-                        <li class="item">
+                        <li class="card">
                             <div class="card-thumb">
                                 <img src="./images/inspiration.jpg" alt="" />
                                 <div class="card-overlay">
@@ -182,7 +186,7 @@
                             </div>
                         </li>
 
-                        <li class="item">
+                        <li class="card">
                             <div class="card-thumb">
                                 <img src="./images/limited-edition.jpg" alt="книги" />
                                 <div class="card-overlay">
@@ -199,7 +203,7 @@
                             </div>
                         </li>
 
-                        <li class="item">
+                        <li class="card">
                             <div class="card-thumb">
                                 <img src="./images/lab.jpg" alt="" />
                                 <div class="card-overlay">
@@ -216,7 +220,7 @@
                             </div>
                         </li>
 
-                        <li class="item">
+                        <li class="card">
                             <div class="card-thumb">
                                 <img src="./images/growing.jpg" alt="" />
                                 <div class="card-overlay">
