--- a/portfolio.html
+++ b/portfolio.html
@@ -102,138 +102,146 @@
                         </li>
 
                         <li class="card">
-                            <div class="card-thumb">
-                                <img src="./images/poster.jpg" alt="два баскетболиста" />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                            <div class="card__wrap">
+                                <img
+                                    class="card__image"
+                                    src="./images/poster.jpg"
+                                    alt="два баскетболиста"
+                                />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
                                     </p>
                                 </div>
                             </div>
-                            <div class="project-card">
-                                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="project-text">Дизайн</p>
+                            <div class="card__content">
+                                <h2 class="card__title">Постер New Orlean vs Golden Star</h2>
+                                <p class="card__text">Дизайн</p>
                             </div>
                         </li>
 
                         <li class="card">
-                            <div class="card-thumb">
-                                <img src="./images/seafood.jpg" alt="" />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                            <div class="card__wrap">
+                                <img class="card__image" src="./images/seafood.jpg" alt="" />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
                                     </p>
                                 </div>
                             </div>
-                            <div class="project-card">
-                                <h2 class="project-title">Ресторан Seafood</h2>
-                                <p class="project-text">Приложение</p>
+                            <div class="card__content">
+                                <h2 class="card__title">Ресторан Seafood</h2>
+                                <p class="card__text">Приложение</p>
                             </div>
                         </li>
 
                         <li class="card">
-                            <div class="card-thumb">
-                                <img src="./images/prime.jpg" alt="" />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                            <div class="card__wrap">
+                                <img class="card__image" src="./images/prime.jpg" alt="" />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
                                     </p>
                                 </div>
                             </div>
-                            <div class="project-card">
-                                <h2 class="project-title">Проект Prime</h2>
-                                <p class="project-text">Маркетинг</p>
+                            <div class="card__content">
+                                <h2 class="card__title">Проект Prime</h2>
+                                <p class="card__text">Маркетинг</p>
                             </div>
                         </li>
 
                         <li class="card">
-                            <div class="card-thumb">
-                                <img src="./images/boxes.jpg" alt="" />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                            <div class="card__wrap">
+                                <img class="card__image" src="./images/boxes.jpg" alt="" />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
                                     </p>
                                 </div>
                             </div>
-                            <div class="project-card">
-                                <h2 class="project-title">Проект Boxes</h2>
-                                <p class="project-text">Приложение</p>
+                            <div class="card__content">
+                                <h2 class="card__title">Проект Boxes</h2>
+                                <p class="card__text">Приложение</p>
                             </div>
                         </li>
 
                         <li class="card">
-                            <div class="card-thumb">
-                                <img src="./images/inspiration.jpg" alt="" />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                            <div class="card__wrap">
+                                <img class="card__image" src="./images/inspiration.jpg" alt="" />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
                                     </p>
                                 </div>
                             </div>
-                            <div class="project-card">
-                                <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
-                                <p class="project-text">Веб-сайт</p>
+                            <div class="card__content">
+                                <h2 class="card__title" lang="en">Inspiration has no Borders</h2>
+                                <p class="card__text">Веб-сайт</p>
                             </div>
                         </li>
 
                         <li class="card">
-                            <div class="card-thumb">
-                                <img src="./images/limited-edition.jpg" alt="книги" />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                            <div class="card__wrap">
+                                <img
+                                    class="card__image"
+                                    src="./images/limited-edition.jpg"
+                                    alt="книги"
+                                />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
                                     </p>
                                 </div>
                             </div>
-                            <div class="project-card">
-                                <h2 class="project-title">Издание Limited Edition</h2>
-                                <p class="project-text">Дизайн</p>
+                            <div class="card__content">
+                                <h2 class="card__title">Издание Limited Edition</h2>
+                                <p class="card__text">Дизайн</p>
                             </div>
                         </li>
 
                         <li class="card">
-                            <div class="card-thumb">
-                                <img src="./images/lab.jpg" alt="" />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                            <div class="card__wrap">
+                                <img class="card__image" src="./images/lab.jpg" alt="" />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
                                     </p>
                                 </div>
                             </div>
-                            <div class="project-card">
-                                <h2 class="project-title">Проект LAB</h2>
-                                <p class="project-text">Маркетинг</p>
+                            <div class="card__content">
+                                <h2 class="card__title">Проект LAB</h2>
+                                <p class="card__text">Маркетинг</p>
                             </div>
                         </li>
 
                         <li class="card">
-                            <div class="card-thumb">
-                                <img src="./images/growing.jpg" alt="" />
-                                <div class="card-overlay">
-                                    <p class="card-overlay-text">
+                            <div class="card__wrap">
+                                <img class="card__image" src="./images/growing.jpg" alt="" />
+                                <div class="overlay">
+                                    <p class="overlay__content">
                                         Ресурс предлагает комплексные предложения с разным уровнем
                                         функционала и сервисов. Все это позволит посетителю получить
                                         исчерпывающие сведения о компании или частном лице.
                                     </p>
                                 </div>
                             </div>
-                            <div class="project-card">
-                                <h2 class="project-title" lang="en">Growing Business</h2>
-                                <p class="project-text">Приложение</p>
+                            <div class="card__content">
+                                <h2 class="card__title" lang="en">Growing Business</h2>
+                                <p class="card__text">Приложение</p>
                             </div>
                         </li>
                     </ul>
